--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <img src="img/Foto_Integrante_2.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Integrante 2</p>
+                  <p class="team__item__description__name">Boris Yeltsein Jove Caceres</p>
                   <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
@@ -108,12 +108,12 @@
                     <img src="img/Foto_Integrante_3.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Integrante 3</p>
+                  <p class="team__item__description__name">Eveline Jessica Llacchua Huarsaya</p>
                   <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>956781784</strong></p>
+                  <a href="mailto:eveline.llacchua@tecsup.edu.pe" class="team__item__description__mail">eveline.llacchua@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
