--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Boris Yeltsein Jove Caceres</p>
-                  <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
+                  <p class="team__item__description__info">Soy una persona muy optimista, en mi En mi vocabulario no existe la palabra no puedo, me gusta que las cosas sean bien hechos, yo sé que lo único que no se hacer son las cosas que todavía no me y propuesto aprender, tengo conocimientos en softwares. Como el SolidWorks, Office; tengo conocimientos básicos en trabajos eléctricos en BT y MT, Tengo conocimientos básicos de mantenimiento de motores con combustión interna, me considero una persona muy proactiva.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
                   <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <a href="mailto:boris.jove@tecsup.edu.pe" class="team__item__description__mail">boris.jove@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Eveline Jessica Llacchua Huarsaya</p>
-                  <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
+                  <p class="team__item__description__info">Soy una persona proactiva y colaboradora, con habilidades de innovación. Aptitud ética, responsable y organizada.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
                   <p class="team__item__description__cal">Numero de Celular: <strong>956781784</strong></p>
