--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <div class="team__item__description">
                   <p class="team__item__description__name">Eveline Jessica Llacchua Huarsaya</p>
                   <p class="team__item__description__info">Soy una persona proactiva y colaboradora, con habilidades de innovación. Aptitud ética, responsable y organizada.</p>
-                  <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                  <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
+                  <p class="team__item__description__cal">Rol principal: <strong>Marketing</strong></p>
+                  <p class="team__item__description__cal">Rol Secundario: <strong>Coordinadora de actividades</strong></p>
                   <p class="team__item__description__cal">Numero de Celular: <strong>956781784</strong></p>
                   <a href="mailto:eveline.llacchua@tecsup.edu.pe" class="team__item__description__mail">eveline.llacchua@tecsup.edu.pe</a>
                 </div>
