--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img src="img/Foto_Integrante_1.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                    <p class="team__item__description__name">Integrante 1</p>
+                    <p class="team__item__description__name">Arapa Cruz, Fredy Michael</p>
                     <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                     <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                     <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
@@ -95,7 +95,7 @@
                     <img src="img/Foto_Integrante_2.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Boris Yeltsein Jove Caceres</p>
+                  <p class="team__item__description__name">Jove Caceres, Boris Yeltsein</p>
                   <p class="team__item__description__info">Soy una persona muy optimista, en mi En mi vocabulario no existe la palabra no puedo, me gusta que las cosas sean bien hechos, yo sé que lo único que no se hacer son las cosas que todavía no me y propuesto aprender, tengo conocimientos en softwares. Como el SolidWorks, Office; tengo conocimientos básicos en trabajos eléctricos en BT y MT, Tengo conocimientos básicos de mantenimiento de motores con combustión interna, me considero una persona muy proactiva.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
@@ -108,7 +108,7 @@
                     <img src="img/Foto_Integrante_3.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Eveline Jessica Llacchua Huarsaya</p>
+                  <p class="team__item__description__name">Llacchua Huarsaya, Eveline Jessica</p>
                   <p class="team__item__description__info">Soy una persona proactiva y colaboradora, con habilidades de innovación. Aptitud ética, responsable y organizada.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Marketing</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Coordinadora de actividades</strong></p>
@@ -121,7 +121,7 @@
                         <img src="img/Foto_Integrante_4.jpg" alt="">
                     </div>
                     <div class="team__item__description">
-                      <p class="team__item__description__name">Integrante 4</p>
+                      <p class="team__item__description__name">Mendoza Choquepata, Luis Leonel</p>
                       <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                       <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
@@ -134,7 +134,7 @@
                             <img src="img/Foto_Integrante_5.jpg" alt="">
                         </div>
                         <div class="team__item__description">
-                          <p class="team__item__description__name">Integrante 5</p>
+                          <p class="team__item__description__name">Porras Quispe, Luis Rene</p>
                           <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                           <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                           <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
