--- a/Curriculum_Vitae/Integrante5.html
+++ b/Curriculum_Vitae/Integrante5.html
@@ -46,7 +46,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Escribir Nombre de Integrante 5</h1>
+                <h1>Porras Quispe, Luis Rene</h1>
             </div>
             <div class="think__title__content">
         </div>
