--- a/Curriculum_Vitae/Integrante3.html
+++ b/Curriculum_Vitae/Integrante3.html
@@ -60,7 +60,7 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Escribir como título "RESUMEN DE CURRICULUM VITAE"</p>
+                    <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
                     <p class="think__details__info__cont">     Extracto profesional: Tengo habilidades en: Creación de modelos de negocio y marketing. Diseño de marca, logo y publicidad de negocio online. Manejo de software SPSS. Manejo básico de AUTOCAD. Manejo de MOVIE MAKER, SONY VEGAS PRO, otros editores online.
 Elaboración de documentos en WORD, presentaciones PPT, PUBLISHER, Excel y PROJECT. Conocimiento de análisis de estados financieros contables, manejo de documentos comerciales. Nivel intermedio de idioma extranjero: INGLÉS.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
