--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Describir el equipo de trabajo sus actividades en las que son realmente hábiles</p>
+                <p>Actualmente somos estudiantes de Electrotecnia Industrial, con conocimientos en administración, trabajos en altura, condifuración de dispositivos intermediarios de redes, cableado estructurado en cobre y fibra óptica,contabilidad y manejo de documentos comerciales, con muchas ganas de Emprender en el mundo y obtener el éxito</p>
             </div>
         </div>
     </div>
