--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                     </div>
                     <div class="team__item__description">
                       <p class="team__item__description__name">Mendoza Choquepata, Luis Leonel</p>
-                      <p class="team__item__description__info">Me considero una perona muy optimista, capaz de poder brindar ayuda al momento de presentarse un problema, me agrada mucho practicar todo tipo de deportes y mi principal objetivo para este proyecto sera desarrollar algo que pueda brindar un gran aporte para la sociedad..</p>
-                      <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                      <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
+                      <p class="team__item__description__info">Me considero una persona muy optimista, capaz de poder brindar ayuda al momento de presentarse un problema, me agrada mucho practicar todo tipo de deportes y mi principal objetivo para este proyecto sera desarrollar algo que pueda brindar un gran aporte para la sociedad..</p>
+                      <p class="team__item__description__cal">Rol principal: <strong>Investigador de recursos</strong></p>
+                      <p class="team__item__description__cal">Rol Secundario: <strong>Comunicador e impulsor </strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>938221528</strong></p>
                       <a href="mailto:Luis.mendoza.ch@tecsup.edu.pe" class="team__item__description__mail">Luis.mendoza.ch@tecsup.edu.pe</a>
                     </div>
