--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont">     Extracto profesional: Diseño y edición de imágenes, manejo avanzado de AutoCAD, manejo de programas computarizados como Word, Excel, PUBLISHER, etc. Así también como Conocimiento básico de SONY VEGAS y otros programas de edición visual, en lo que abarca mi carrera poseo conocimiento básico de instalaciones en baja tensión e idiomas extranjeros cuento con el nivel básico de idioma INGLÉS.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">     Extracto profesional: Diseño y edición de imágenes, manejo avanzado de AutoCAD, manejo de programas computarizados como Word, Excel, PUBLISHER, etc. Así también cuento co  conocimiento básico de SONY VEGAS y otros programas de edición visual, en lo que abarca mi carrera poseo conocimiento básico de instalaciones en baja tensión e idiomas extranjeros cuento con el nivel básico de idioma INGLÉS.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
