--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -53,7 +53,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTXUL9QOWmvujeudm_XkXUD7GC1I0fOzoHeWYZTUopqZ-6xskNRaMwp_T2ePbByrZzYyAWQ1btmDsPm/pub?embedded=true" height="560" width="600"></iframe>
+                <iframe src="<iframe src="https://docs.google.com/document/d/e/2PACX-1vSaEBIRsCY5eCRpS2ofB3maypDUrHr96VBynfguLEdIV9p61X3r1VVLKIRqM_jjYtcZ429oeCGGPM4e/pub?embedded=true"></iframe>" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
