--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -25,7 +25,7 @@
                     <li><a href="Integrante1.html">Integrante 1</a></li>
                     <li><a href="Integrante2.html">Integrante 2</a></li>
                     <li><a href="Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Integrante4.html">Integrante 4</a></li>
+                    <li><a href="Integrante4.html">Mendoza Choquepata Luis Leonel </a></li>
                     <li><a href="Integrante5.html">Integrante 5</a></li>
                 </ul>
              </li>
