--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Actualmente somos estudiantes de Electrotecnia Industrial, con conocimientos en administración, trabajos en altura, condifuración de dispositivos intermediarios de redes, cableado estructurado en cobre y fibra óptica,contabilidad y manejo de documentos comerciales, con muchas ganas de Emprender en el mundo y obtener el éxito</p>
+                <p>Actualmente somos estudiantes de Electrotecnia Industrial, con conocimientos en administración, trabajos en altura, configuración de dispositivos intermediarios de redes, cableado estructurado en cobre y fibra óptica,contabilidad y manejo de documentos comerciales, con muchas ganas de Emprender en el mundo y obtener el éxito</p>
             </div>
         </div>
     </div>
@@ -86,8 +86,8 @@
                     <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                     <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                     <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                    <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                    <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                    <p class="team__item__description__cal">Numero de Celular: <strong>953269525</strong></p>
+                    <a href="mailto:fredy.arapa@tecsup.edu.pe" class="team__item__description__mail">fredy.arapa@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -99,7 +99,7 @@
                   <p class="team__item__description__info">Soy una persona muy optimista, en mi En mi vocabulario no existe la palabra no puedo, me gusta que las cosas sean bien hechos, yo sé que lo único que no se hacer son las cosas que todavía no me y propuesto aprender, tengo conocimientos en softwares. Como el SolidWorks, Office; tengo conocimientos básicos en trabajos eléctricos en BT y MT, Tengo conocimientos básicos de mantenimiento de motores con combustión interna, me considero una persona muy proactiva.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>940208834</strong></p>
                   <a href="mailto:boris.jove@tecsup.edu.pe" class="team__item__description__mail">boris.jove@tecsup.edu.pe</a>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                       <p class="team__item__description__cal">Rol principal: <strong>Investigador de recursos</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Comunicador e impulsor </strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>938221528</strong></p>
-                      <a href="mailto:Luis.mendoza.ch@tecsup.edu.pe" class="team__item__description__mail">Luis.mendoza.ch@tecsup.edu.pe</a>
+                      <a href="mailto:luis.mendoza.ch@tecsup.edu.pe" class="team__item__description__mail">luis.mendoza.ch@tecsup.edu.pe</a>
                     </div>
                 </div>
                 <div class="team__item">
@@ -135,11 +135,11 @@
                         </div>
                         <div class="team__item__description">
                           <p class="team__item__description__name">Porras Quispe, Luis Rene</p>
-                          <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
+                          <p class="team__item__description__info">Tengo intereses en temas relacionados con fabricación de nuevos productos tecnológicos y manipulación de redes convergentes.</p>
                           <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                           <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                          <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                          <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                          <p class="team__item__description__cal">Numero de Celular: <strong>957108951</strong></p>
+                          <a href="mailto:luis.porras@tecsup.edu.pe" class="team__item__description__mail">luis.porras@tecsup.edu.pe</a>
                         </div>
                     </div>
         </div>
