--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                         <div class="team__item__description">
                           <p class="team__item__description__name">Porras Quispe, Luis Rene</p>
-                          <p class="team__item__description__info">Tengo intereses en temas relacionados con fabricación de nuevos productos tecnológicos y manipulación de redes convergentes.</p>
+                          <p class="team__item__description__info">Tengo intereses en temas relacionados con fabricación de nuevos productos tecnológicos.</p>
                           <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                           <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
                           <p class="team__item__description__cal">Numero de Celular: <strong>957108951</strong></p>
