--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                         </div>
                         <div class="team__item__description">
                           <p class="team__item__description__name">Porras Quispe, Luis Rene</p>
-                          <p class="team__item__description__info">Tengo intereses en temas relacionados con fabricación de nuevos productos tecnológicos.</p>
-                          <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                          <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
+                          <p class="team__item__description__info">Me agrada trabajar en equipo y tengo intereses en temas relacionados con fabricación de nuevos productos tecnológicos.</p>
+                          <p class="team__item__description__cal">Rol principal: <strong>Implementador</strong></p>
+                          <p class="team__item__description__cal">Rol Secundario: <strong>Proveedor de recursos</strong></p>
                           <p class="team__item__description__cal">Numero de Celular: <strong>957108951</strong></p>
                           <a href="mailto:luis.porras@tecsup.edu.pe" class="team__item__description__mail">luis.porras@tecsup.edu.pe</a>
                         </div>
