--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -53,8 +53,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vT1YgObqDNUaZFTp2Phht5Lorh_zfMQhPPYm5RlNgvvO3djB8evub5kpvDlPq6P0jffR6NRajOMQngM/pub?embedded=true" height="560" width="600">></iframe>
-
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vT1YgObqDNUaZFTp2Phht5Lorh_zfMQhPPYm5RlNgvvO3djB8evub5kpvDlPq6P0jffR6NRajOMQngM/pub?embedded=true" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
