--- a/Curriculum_Vitae/Integrante3.html
+++ b/Curriculum_Vitae/Integrante3.html
@@ -26,7 +26,7 @@
                     <li><a href="Integrante2.html">Integrante 2</a></li>
                     <li><a href="Integrante3.html">Integrante 3</a></li>
                     <li><a href="Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Porras Quispe, Luis Rene.html">Porras Quispe, Luis Rene</a></li>
+                    <li><a href="Integrante5.html">Integrante 5</a></li>
                 </ul>
              </li>
             <li><a href="">Proyecto de Innovación</a>
