--- a/Curriculum_Vitae/Integrante5.html
+++ b/Curriculum_Vitae/Integrante5.html
@@ -61,7 +61,8 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Escribir como título "RESUMEN DE CURRICULUM VITAE"</p>
-                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">     Extracto profesional: Tengo habilidades en: Instalaciones Eléctricas domiciliarias y simulaciones de circuitos eléctricos de baja tensión. Manejo de software CadeSimu. Manejo básico de LiveWire, AUTOCAD, Wondershare Filmora, Microsoft Office 2010, Microsoft Office 2010 y DeezLoader.
+Diseño y modificación de imágenes, fotografías, PUBLISHER, Excel y PROJECT. Conocimiento de análisis de estados financieros contables, manejo de documentos comerciales. Nivel báscio de idioma extranjero: INGLÉS.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
