--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p class="team__item__description__name">Arapa Cruz, Fredy Michael</p>
                     <p class="team__item__description__info">Soy una persona innovadora y emprendedora con deseos de mejora en lo individual y grupal.</p>
                     <p class="team__item__description__cal">Rol principal: <strong>Revision técnica</strong></p>
-                    <p class="team__item__description__cal">Rol Secundario: <strong>control de proyecto</strong></p>
+                    <p class="team__item__description__cal">Rol Secundario: <strong>Control de proyecto</strong></p>
                     <p class="team__item__description__cal">Numero de Celular: <strong>953269525</strong></p>
                     <a href="mailto:Fredy.arapa@tecsup.edu.pe" class="team__item__description__mail">Fredy.arapa@tecsup.edu.pe</a>
                 </div>
