--- a/Curriculum_Vitae/Integrante5.html
+++ b/Curriculum_Vitae/Integrante5.html
@@ -22,11 +22,11 @@
 			<li><a href="../index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-                    <li><a href="Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Integrante5.html">Integrante 5</a></li>
+                    <li><a href="Integrante1.html">Arapa Cruz, Fredy Michael</a></li>
+                    <li><a href="Integrante2.html">Jove Caceres, Boris Yeltsein</a></li>
+                    <li><a href="Integrante3.html">Llacchua Huarsaya, Eveline Jessica</a></li>
+                    <li><a href="Integrante4.html">Mendoza Choquepata, Luis Leonel</a></li>
+                    <li><a href="Integrante5.html">Porras Quispe, Luis Rene</a></li>
                 </ul>
              </li>
             <li><a href="">Proyecto de Innovación</a>
