--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p><h4>"Escribir el título del Proyecto"</h4></p>
-                    <p>Escribir descripción del problema a resolver.</p>
-                    <p>Escribir descripción de página web como herramienta de control de avances.</p>
+                    <p><h4>"Healthy Energy"</h4></p>
+                    <p>En nuestra sociedad va en acumento la demanda de energía eléctrica sobre todo en celulares, además de que el sobrepeso se ha convertido en un factor determinante para conseguir oportunidades de trabajo en los exámenes médicos (requisito de empleabilidad) y que se encuentran mayor riesgo de salud inestable.</p>
+                    <p>Combinar salud, ejercicio y creación de energía eléctrica para cargar cualquier dispositivo que cuente con entrada USB, a través del uso de una bicicleta estática de gimnasio.</p>
 
                 </div>
             </div>
