--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Describir el equipo de trabajo sus actividades en las que son realmente hábiles</p>
+                <p>Somos estudiantes de la carrera de Electrotecnia Industrial en TECSUP, contamos con conocimientos en Administración de Negocios, contabilidad, manejo de documentos comerciales, experiencia en trabajos con sistema eléctrico, configuración de dispositivos intermediarios de redes, cableado estructurado en cobre y fibra óptica. Tenemos iniciativa de emprendimiento en el mercado laboral, buscamos ser profesionales de éxito,</p>
             </div>
         </div>
     </div>
