--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vRJS6IXDCrNE4OwoeOeMb1VLIfDwb7O5BtrCpak-JhrXbDOKwTb_50BcNLzG8jDfP-D-Iz1zELgrGl_/pub?embedded=true" height="560" width="560"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vRILrcB-V4QEuMar6FoxTv-CQVi4_fB4zTeiyDl-Q6jtCruZQlPR78MR5VMVa_dORYobk7XjMAEOlC5/pub" height="560" width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
