--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                           <p class="team__item__description__cal">Rol principal: <strong>Implementador</strong></p>
                           <p class="team__item__description__cal">Rol Secundario: <strong>Proveedor de recursos</strong></p>
                           <p class="team__item__description__cal">Numero de Celular: <strong>957108951</strong></p>
-                          <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                          <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">luis.porras@tecsup.edu.pe</a>
                         </div>
                     </div>
         </div>
