--- a/Curriculum_Vitae/Integrante5.html
+++ b/Curriculum_Vitae/Integrante5.html
@@ -53,7 +53,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/1zZ1CioWIotT0ohsHj6oAiUFn75NK5jdSfcATbQDaklA/edit?usp=sharing" height="560" width="600"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTWqjuhjw2l11PZN2ZxJx3gowKPEtaBEYmwnnBgHTz9o1Kl4AkZsVVkJHHy-LXvkd_a2oHpXGXkyx4Q/pub" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
