--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                     <div class="team__item__description">
                       <p class="team__item__description__name">Mendoza Choquepata, Luis Leonel</p>
                       <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                      <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                      <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
+                      <p class="team__item__description__cal">Rol principal: <strong>Buscar soluciones a problemas</strong></p>
+                      <p class="team__item__description__cal">Rol Secundario: <strong>Coordinadora de actividades</strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>928873262</strong></p>
                       <a href="luis.mendoza.ch@tecsup.edu.pe" class="team__item__description__mail">luis.mendoza.ch@tecsup.edu.pe</a>
                     </div>
