--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 <div class="team__item__description">
                   <p class="team__item__description__name">Jove Caceres, Boris Yeltsein</p>
                   <p class="team__item__description__info">Soy una persona muy optimista, en mi vocabulario no existe la palabra no puedo, me gusta que las cosas sean bien hechos, yo sé que lo único que no se hacer son las cosas que todavía no me y propuesto aprender, tengo conocimientos en softwares. Como el SolidWorks, Office; tengo conocimientos básicos en trabajos eléctricos en BT y MT, Tengo conocimientos básicos de mantenimiento de motores con combustión interna, me considero una persona muy proactiva.</p>
-                  <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                  <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
+                  <p class="team__item__description__cal">Rol principal: <strong>Habilidades técnicas</strong></p>
+                  <p class="team__item__description__cal">Rol Secundario: <strong>Buscar soluciones a problemas</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>940208834,914806578</strong></p>
                   <a href="mailto:boris.jove@tecsup.edu.pe" class="team__item__description__mail">boris.jove@tecsup.edu.pe</a>
                 </div>
             </div>
