--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="team__item__description">
                       <p class="team__item__description__name">Mendoza Choquepata, Luis Leonel</p>
-                      <p class="team__item__description__info">Me considero una persona memprendedora con ganas de aprender muchas cos capaz de brindar solucionas al momento de presentarse problemas, me agrada prácticar todo tipo de deportes y mi objetivo para este proyecto es dar a conocer una propuesta que beneficie a la sociedad en todo aspecto.</p>
+                      <p class="team__item__description__info">Me considero una persona emprendedora con ganas de aprender muchas cos capaz de brindar solucionas al momento de presentarse problemas, me agrada prácticar todo tipo de deportes y mi objetivo para este proyecto es dar a conocer una propuesta que beneficie a la sociedad en todo aspecto.</p>
                       <p class="team__item__description__cal">Rol principal: <strong> Investigador de recursos.</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Comunicador e impulsor.</strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>938221528</strong></p>
