--- a/Actividades/Actividad4.html
+++ b/Actividades/Actividad4.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vQSXBPK0P5QC-XpRMDeouCByBsLv86T9jLSNJP-zvfNP_8BCm4LVBKZDE2nxEhtgJZgExzI4wYWrWOV/pub?embedded=true"height="560" width="560"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTR6__OPOFZT0Hk7ce43RPKKwGxcCcishIkybD_WCux6r_pflNxrsCb5GO4lUe4wLATbyppluUPRXfu/pub"height="560" width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
