--- a/Actividades/Informe_Final.html
+++ b/Actividades/Informe_Final.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTMXLPkJ04tGfgRnHuJic8EdvGgA4R8Ixt8E45fiHiSc9eF3RCTlcJMmrQkJFb7Y2J5Z8Ho_7mIM8mw/pub?embedded=true"height="560"width="560"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vSqS9BnmWumGgERlHnCUoqGUazuN1yijcISdwkaMAudu7z2Lhbvg7whfTzZbqebYTxj3SIOTTlhk7WS/pub"height="560"width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
