--- a/Actividades/Actividad6.html
+++ b/Actividades/Actividad6.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vSzmMyX48l0IhalZr-5avzFabL28s8URUaoASr9Ic0NhPZPbwe2q7rj5ffvh_NJ-k0qRmp3cGTbEN5m/pub?embedded=true"height="560" width="560"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vSqc5R7vE6Jememv4Y1N2PA-069JjfEB18_EmXw1k3uBrgS6QI4Y5-cIc1fOMvA3mlPKUKRVcI-DZOW/pub"height="560" width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
