--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -66,19 +66,19 @@
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 1</p>
-                    <p class="think__details__extra__description">Entienden que emprender es cuestión de problemas y capacidades según los casos de estudio.</p>
+                    <p class="think__details__extra__description">Se describen ideas o modos de uso con una pelota de tenis.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 2</p>
-                    <p class="think__details__extra__description">Identifican sus capacidades para emprender.</p>
+                    <p class="think__details__extra__description">Se plantean las habilidades por cada integrantes del equipo.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 3</p>
-                    <p class="think__details__extra__description">Planifican el Proceso.</p>
+                    <p class="think__details__extra__description">Se realizó un  Diagrama de Gantt con la programación de entrega de actividades.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 4</p>
-                    <p class="think__details__extra__description">Entienden que emprender es una actividad en equipo.</p>
+                    <p class="think__details__extra__description">Exponemos nuestra posición respecto a la innovación.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 5</p>
