--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
-                    <p class="think__details__extra__description">Desarrollar cada criterio de evaluación, si existen imágenes o videos colocarlos en el lado izquierdo de la página referenciando los mismos.</p>
+                    <p class="think__details__extra__description">Se respondió a detalle los criterios dispuestos en la actividad de Emprendimiento.</p>
 
                 </div>
 
